# Projetos_DIO

./: README.md  sistema_bancario_v1.py
02 - Programação Orientada a Objeto/02 - Classes e objetos/: 01_desafio_biciletaria.py
02 - Programação Orientada a Objeto/03- Construtores e Destrutores/: 01_construtores_destrutores.py
02 - Programação Orientada a Objeto/04- Herança/: heranca_multipla.py
02 - Programação Orientada a Objeto/06 - Polimorfismo/: polimorfismo.py
03 - Decoradores, Iteradores e Geradores/: 1_passagem_param.py  3_retorna_funcao.py  4.1_primeiro_decorador.py  4.2_primeiro_decorador_acucar_sintax.py  5.2_decorador_retorna_valor_func_decorada.py
04 - Data e Hora/: 1_datetime.py  2_timedelta.py  3_strftime_strptime.py
04- Herança/: heranca_multipla.py
05 - Encapsulamento/: encapsulamento.py
05 - Manipulação de Arquivos/: 1_operacao_leitura.py  2_operacao_escrita.py  3_os_shutil.py  4_tratamento_erro.py  5_boas_praticas.py  6_csv.py  arquivo-utf-8.txt
06 - Gerenciamento de Pacotes e Boas Práticas/01 - Ambiente Virtual/: pyproject.toml
06 - Gerenciamento de Pacotes e Boas Práticas/01 - Ambiente Virtual/.env/: pyvenv.cfg
06 - Gerenciamento de Pacotes e Boas Práticas/01 - Ambiente Virtual/.env/Scripts/: activate  activate.bat
07 - Banco de Dados/: 01_dbapi.py  02_injecao_sql.py  03_transacao.py  clientes.sqlite
08 - Métodos de classe e métodos estáticos/: metodos_classe_estatico.py
09 - Classes Abstratas/: classe_abstrata.py
Explorando POO com Python/: desafio_01.py  desafio_02.py  desafio_03.py
Herança/: heranca_simples.py
(+3 files in other folders)
